# litmus

./: .beans.yml  .gitignore  .mise.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  bacon.toml  flake.nix  justfile
.beans/: .gitignore  litmus-0uoe--update-litmus-cli-to-render-termoutput.md  litmus-28sq--build-ansi-to-spans-parser-using-vte.md  litmus-2ixq--curate-10-20-high-quality-themes.md  litmus-2mjz--live-terminal-capture.md  litmus-2w3r--provider-ecosystem-view.md  litmus-2wte--m3-terminal-ecosystem-rendering.md  litmus-2xrw--visual-polish-and-edge-case-handling.md  litmus-3lcp--research-existing-terminal-output-datasets-and-ans.md  litmus-3zkh--set-up-github-pages-for-docslitmusedgerdev.md  litmus-49jz--fixtures-iteration-more-realistic-better-color-sho.md  litmus-4ai1--cap-compare-at-3-themes.md  litmus-4t4e--define-canonical-theme-file-format.md  litmus-4uyp--show-all-themes-with-availability-feedback.md  litmus-52qn--generate-and-curate-first-batch-of-candidate-fixtu.md  litmus-5fj8--theme-first-vs-provider-first-navigation.md  litmus-5osv--cache-bust-manifestjson-fetch-to-prevent-stale-cdn.md  litmus-5tj3--theme-quality-checks.md  litmus-65nt--compare-tray-persistent-bottom-bar.md  litmus-7rix--litmus-repo-skeleton-setup.md  litmus-7zy0--investigate-cloudflare-cache-rules-not-applying-to.md  litmus-8dqh--implement-kittyconf-and-base16-yaml-parsers.md  litmus-f1b3--m0-tui-prototype.md  (+65 more)
crates/litmus-capture/: Cargo.toml
crates/litmus-capture/src/: capture.rs  main.rs  manifest.rs
crates/litmus-capture/src/providers/: kitty.rs  mod.rs  wezterm.rs
(+252 files in other folders)
