[package]
name = "litmus-capture"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "litmus-capture"
path = "src/main.rs"

[dependencies]
litmus-model.workspace = true
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
thiserror.workspace = true
serde_json = "1"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "webp"] }
walkdir = "2"
rayon = "1"
num_cpus = "1"
